2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/48_OpInParam.deca
// Description:
//    Programme : une operation comme paramétre d'un appel d'une fonction
// Resultats:
//      Programme correcte suntaxiquement, incorrecte contextuellemnt car j'ai appelé dans main une fonction qui n'existe pas
//
// Historique:
//    cree le 20/01/2024
class C {
    int x,y;
    void setX(int x, int y)
    {
        this.x = x;
        this.y = y;
    }
}

{
    A a = new A();
    a.setX( 2 +3*5/6,3);
    
}
